[package]
name = "my-proc-macro"
version = "0.1.0"
authors = ["Mathieu David <mathieu.david@sky-hero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["full", "extra-traits"] }
